--- a/index.html
+++ b/index.html
@@ -10,50 +10,30 @@
     <script src="front.js"></script>
 </head>
 
-<body onload="logIn()">
+<body onload="logIn(); selectJSONParser('directions');">
     <div id="container">
+        <div>
+            <select name="jsonParserSelector" id="jsonParserSelector" onchange="selectJSONParser(value)">
+                <option value="directions">Направления подготовки</option>
+                <option value="other">Прочее</option>
+            </select>
+        </div>
         <div>
             <input type="file" id='fileChooser'>
             <button onclick="load()">Отправить</button>
         </div>
         <div id='titleContainer'>
-            <div class='buttons'>
-                <button onclick="createWindow('title')">
-                    Добавить
-                </button>
-                <button onclick="createWindow('title', true)">
-                    Редактировать
-                </button>
-                <button onclick="removeTitle()">
-                    Удалить
-                </button>
-            </div>
-            <select id="titleName" onchange="updateTitleData()"></select>
-            <div id='subtitleContainer'>
+            <div id='subtitleDataContainer'>
                 <div class='buttons'>
-                    <button onclick="createWindow('subtitle')">
-                        Добавить
+                    <button onclick="createWindow('field_add')">
+                        Добавить поле
                     </button>
-                    <button onclick="createWindow('subtitle', true)">
-                        Редактировать
-                    </button>
-                    <button onclick="removeSubtitle()">
-                        Удалить
+                    <button onclick="createWindow('field_delete')">
+                        Удалить поле
                     </button>
                 </div>
-                <select id="subtitleName" onchange="updateSubtitleData()"></select>
-                <div id='subtitleDataContainer'>
-                    <div class='buttons'>
-                        <button onclick="createWindow('field_add')">
-                            Добавить поле
-                        </button>
-                        <button onclick="createWindow('field_delete')">
-                            Удалить поле
-                        </button>
-                    </div>
-                    <ul id='subtitleData'>
-                    </ul>
-                </div>
+                <ul id='subtitleData'>
+                </ul>
             </div>
             <button onclick="save()">Сохранить</button>
         </div>
